[gd_scene load_steps=6 format=3 uid="uid://d2wv8tq2vcyy0"]

[ext_resource type="Script" uid="uid://b3b7xurlqar1p" path="res://NewUI/BattleUI/battle_ui.gd" id="1_ynybp"]
[ext_resource type="Script" uid="uid://w6n3bsbyawie" path="res://NewUI/player_ui_container.gd" id="2_yamdc"]
[ext_resource type="PackedScene" uid="uid://cndlh7i1ac7qy" path="res://NewUI/PlayerUnitUI/unit_stats_container.tscn" id="3_i45e8"]
[ext_resource type="Script" uid="uid://kmvxgau2xhvc" path="res://NewUI/PlayerUnitUI/player_unit_container.gd" id="3_nm36g"]
[ext_resource type="PackedScene" uid="uid://cxvr865kqc7aw" path="res://NewUI/PlayerAttackUI/player_attack_container.tscn" id="5_nm36g"]

[node name="BattleUI" type="CanvasLayer"]
script = ExtResource("1_ynybp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerUIContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_yamdc")

[node name="PlayerActionContainer" type="VBoxContainer" parent="Control/PlayerUIContainer"]
layout_mode = 2

[node name="AttackButton" type="Button" parent="Control/PlayerUIContainer/PlayerActionContainer"]
layout_mode = 2
text = "Attack"

[node name="DefendButton" type="Button" parent="Control/PlayerUIContainer/PlayerActionContainer"]
layout_mode = 2
text = "Defend"

[node name="SkillButton" type="Button" parent="Control/PlayerUIContainer/PlayerActionContainer"]
layout_mode = 2
text = "Skill"

[node name="MoveButton" type="Button" parent="Control/PlayerUIContainer/PlayerActionContainer"]
layout_mode = 2
text = "Move"

[node name="StatusButton" type="Button" parent="Control/PlayerUIContainer/PlayerActionContainer"]
layout_mode = 2
text = "Status"

[node name="PlayerUnitContainer" type="VBoxContainer" parent="Control/PlayerUIContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_nm36g")

[node name="UnitStatsContainer" parent="Control/PlayerUIContainer/PlayerUnitContainer" instance=ExtResource("3_i45e8")]
layout_mode = 2

[node name="PlayerAttackContainer" parent="Control/PlayerUIContainer" instance=ExtResource("5_nm36g")]
layout_mode = 2
